src/objects/Watch_List__c.object
<CustomObject>
    <fields>
        <fullName>Always_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Offering__c</fullName>
        <label>Country of Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset_Category__c</fullName>
        <label>Use Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <label>TPA Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Watch Lists</relationshipLabel>
        <relationshipName>Watch_Lists_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TPA Watch List</label>
    <nameField>
        <displayFormat>W-{0000000}</displayFormat>
        <label>Watch List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPA Watch Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>